# fitness-dashboard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_STATUS_2025-09-07.md  INTELLIGENCE_OVERHAUL_PLAN.md  PHASE1_TESTING_IMPLEMENTATION_REPORT.md  PHASE1_TESTING_STRATEGY_2025-09-10.md  PHASE2_INTELLIGENCE_UI_IMPLEMENTATION_REPORT.md  PUBLIC-DOCS-README.md  README.md  check_shadowing_conflicts.py  deploy.sh  init.py  mkdocs-public.yml  mkdocs.yml  pyproject.toml  requirements.txt  sessions.db
docs/: CLASSIFICATION_BUG_ANALYSIS.md  VISUAL_ASSETS_TOC.md  classification-bug-current-flow.md  classification-ideal-flow.md  index.md
docs-public/: index.md
migrations/: 001_create_classification_tables.sql
narrative-visualizations/: BLOG_ARTICLE_exercise-dashboard.md  Show_Pace_Histograms.html  all_3_hists.html  fig_1_timeline.html  fig_2_hist_distance.html  fig_2_violin_pace.html  pace_hist.html
notebooks/: 01_data_exploration.ipynb  02_classification_experiments.ipynb  03_algorithm_transparency.ipynb  README.md  WORKFLOW_TEST_SUMMARY.md  environment.yml  requirements-notebooks.txt  test_workflow.py
scripts/: add_audit_tables.py  analyze_model.py  check_recent_classifications.py  deploy.sh  export_classifications_csv.py  init.py  model_status.py  train_model.py  update_db.py  validate_sql_docs.py
src/: calendar_more.py  calendar_utils.py  dash.py  fitness-overview.py  fitness-overview_isDifferent.py  login.py  session_manager.py  streamlit_app.py  style_config.json  update_db.py  user2632022_workout_history.csv  utilities.py  workout-dashboard.py
(+127 files in other folders)
